@@ -10,6 +10,7 @@ import be.vinci.ipl.pfe.group05.shiftingpact.repositories.FormsRepository;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -41,7 +42,7 @@ public class FormsService {
     if (total == 0) {
       return 0;
     }
-   // return (int) ((double) completed / total * 100);
+    // return (int) ((double) completed / total * 100);
     return completed / total * 100;
   }
 
@@ -54,17 +55,8 @@ public class FormsService {
     }
     return allFormsInProgress;
   }
-
-
-  public Form updateProgression(int formId) {
-    Form form = repository.findByFormId(formId).orElse(null);
-    if (form == null) {
-      throw new IllegalArgumentException("Formulaire introuvable");
-    }
-    int progression = calculateProgression(form);
-    form.setProgression(progression);
-    repository.save(form);
-    return form;
+  public Form getFormByCompanyId(int companyID){
+    return repository.findByCompanyId(companyID).stream().findFirst().orElse(null);
   }
 
 
@@ -119,25 +111,25 @@ public class FormsService {
   }
 
   public Form saveAnswers(int formId, List<Answer> answers) {
-  Form form = repository.findByFormId(formId).orElse(null);
-  if (form == null) {
+    Form form = repository.findByFormId(formId).orElse(null);
+    if (form == null) {
       throw new IllegalArgumentException("Formulaire introuvable");
     }
-  if(form.getSendAt()!=null){
-    throw new IllegalArgumentException("Le formulaire a déjà été envoyé");
-  }
-  List<Answer> existingAnswers = form.getAnswersList();
-  for (Answer newAnswer : answers) {
-    if (newAnswer.getResponse() != null && !newAnswer.getResponse().isEmpty()) {
-      existingAnswers.removeIf(existingAnswer -> existingAnswer.getQuestionId() == newAnswer.getQuestionId());
-      existingAnswers.add(newAnswer);
+    if(form.getSendAt()!=null){
+      throw new IllegalArgumentException("Le formulaire a déjà été envoyé");
     }
-  }
+    List<Answer> existingAnswers = form.getAnswersList();
+    for (Answer newAnswer : answers) {
+      if (newAnswer.getResponse() != null && !newAnswer.getResponse().isEmpty()) {
+        existingAnswers.removeIf(existingAnswer -> existingAnswer.getQuestionId() == newAnswer.getQuestionId());
+        existingAnswers.add(newAnswer);
+      }
+    }
 
-  form.setAnswersList(existingAnswers);
-  form.setCompleted(existingAnswers.size());
-  return repository.save(form);
-}
+    form.setAnswersList(existingAnswers);
+    form.setCompleted(existingAnswers.size());
+    return repository.save(form);
+  }
 
   public Form submit(int formId) {
     Form form = repository.findByFormId(formId).orElse(null);
@@ -152,12 +144,19 @@ public class FormsService {
     }
 
     // Calcul des scores pour chaque pilier
-    double scoreE = calculateScoreByPillar(form, 'E');
-    double scoreS = calculateScoreByPillar(form, 'S');
-    double scoreG = calculateScoreByPillar(form, 'G');
+    double scoreE = calculateScoreByPillar(form, "E");
+    double scoreS = calculateScoreByPillar(form, "S");
+    double scoreG = calculateScoreByPillar(form, "G");
 
     // Calcul du score total ESG
     double scoreESG = scoreE + scoreS + scoreG;
+
+    // Normalisation des scores par 30 et conversion en pourcentage
+    scoreE = (scoreE / 30) * 100;
+    scoreS = (scoreS / 30) * 100;
+    scoreG = (scoreG / 30) * 100;
+    scoreESG = (scoreESG / 90) * 100; // Diviser par 90 (30 * 3) pour obtenir le pourcentage total ESG // TODO ?
+
 
     // Mise à jour des scores dans le formulaire
     form.setScoreE(scoreE);
@@ -173,34 +172,39 @@ public class FormsService {
   }
 
 
-  private double calculateScoreByPillar(Form form, char pillar) {
+  private double calculateScoreByPillar(Form form, String pillar) {
     if (form == null || form.getAnswersList() == null || form.getQuestionList() == null) {
       throw new IllegalArgumentException("Form or its required data cannot be null");
     }
 
-    // Calcul du score total pour un pilier spécifique
-    return form.getQuestionList().stream()
-        .filter(question -> question.getPilier() == pillar) // Filtrer par pilier
-        .mapToDouble(question -> {
-          // Récupérer toutes les réponses pour cette question
-          List<Answer> answersForQuestion = form.getAnswersList().stream()
-              .filter(answer -> answer.getQuestionId() == question.getQuestionId())
-              .toList();
+    // Liste des questions filtrées par pilier
+    List<Question> questionsForPillar = form.getQuestionList().stream()
+        .filter(question -> question.getPillar().startsWith(pillar))
+        .collect(Collectors.toList());
 
-          if (!answersForQuestion.isEmpty()) {
-            // Calculer la somme des poids des choix sélectionnés
-            double totalChoiceWeight = answersForQuestion.stream()
-                .mapToDouble(answer -> getChoiceWeight(question, answer.getResponse()))
-                .sum();
+    double totalScore = 0;
 
-            // Diviser le score total pour cette question par 2
-            return totalChoiceWeight / 2.0;
-          }
+    // Pour chaque question, calculer le score total
+    for (Question question : questionsForPillar) {
+      // Récupérer toutes les réponses associées à la question
+      List<Answer> answersForQuestion = form.getAnswersList().stream()
+          .filter(answer -> answer.getQuestionId() == question.getQuestionId())
+          .collect(Collectors.toList());
 
-          return 0; // Aucun score si pas de réponses pour cette question
-        })
-        .sum();
+      if (!answersForQuestion.isEmpty()) {
+        // Calculer la somme des poids des choix sélectionnés
+        double totalChoiceWeight = 0;
+        for (Answer answer : answersForQuestion) {
+          totalChoiceWeight += getChoiceWeight(question, answer.getResponse());
+        }
+
+        totalScore += totalChoiceWeight;
+      }
+    }
+
+    return totalScore;
   }
+
 
   /**
    * Récupère le poids d'un choix donné dans une question.
@@ -219,6 +223,25 @@ public class FormsService {
   }
 
 
+  public int getNumberOfSubmittedForms() {
+    return repository.findAll().stream()
+        .filter(Form::isSubmitted)
+        .toList()
+        .size();
+  }
 
+  public double getAverageScoreESG() {
+    List<Form> forms = (List<Form>) repository.findAll();
+    double totalScore = 0;
+    for (Form form : forms) {
+      totalScore += form.getScoreESG();
+    }
+    return totalScore / forms.size();
+  }
+
+  public int getNumberOfFormsInProgress() {
+    return (int) repository.findAll().
+        stream().filter(form -> !form.isSubmitted()).count();
+  }
 
 }
